--- a/[OLC1]Proyecto1/[OLC1]Proyecto1.csproj
+++ b/[OLC1]Proyecto1/[OLC1]Proyecto1.csproj
@@ -53,6 +53,8 @@
     <Compile Include="AnalizadorLexico.cs" />
     <Compile Include="ArbolBinario.cs" />
     <Compile Include="Automata.cs" />
+    <Compile Include="Cerradura.cs" />
+    <Compile Include="Conjunto.cs" />
     <Compile Include="Error.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -60,9 +62,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Mueve.cs" />
     <Compile Include="Nodo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReconecedorConjuntos.cs" />
+    <Compile Include="Thompson.cs" />
     <Compile Include="Token.cs" />
     <Compile Include="Transicion.cs" />
     <EmbeddedResource Include="Form1.resx">
