Validacion de lexemas y analizador Sinticatico

--- a/[OLC1]Proyecto1/[OLC1]Proyecto1.csproj
+++ b/[OLC1]Proyecto1/[OLC1]Proyecto1.csproj
@@ -36,6 +36,12 @@
     <Reference Include="FastColoredTextBox">
       <HintPath>..\..\..\..\Proyectos Visual\DesignUserInterface\FastColoredTextBox-master\Binary\FastColoredTextBox.dll</HintPath>
     </Reference>
+    <Reference Include="InputKey">
+      <HintPath>..\..\..\..\Proyectos Visual\[LFP]Proyecto1_201807455\InputKey.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp, Version=5.5.13.1, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\packages\iTextSharp.5.5.13.1\lib\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
@@ -51,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalizadorLexico.cs" />
+    <Compile Include="AnalizadorSintactico.cs" />
     <Compile Include="ArbolBinario.cs" />
     <Compile Include="Automata.cs" />
     <Compile Include="Cerradura.cs" />
@@ -83,6 +90,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
